tests/e2e/snapshots/test__e2e__flow__liveinstall__moon_lsp_nodebased_lsp_help.snap
---
source: tests/e2e/flow.rs
info:
  program: moon-lsp
  args:
    - +nightly-2026-01-31
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Options:
      --help     Show help                                             [boolean]
      --version  Show version number                                   [boolean]
  -v             Get the version of the lsp server                     [boolean]

----- stderr -----
