tests/e2e/snapshots/test__e2e__flow__liveinstall__moon_lsp_nodebased_lsp_version.snap
---
source: tests/e2e/flow.rs
info:
  program: moon-lsp
  args:
    - +nightly-2026-01-31
    - "-v"
---
success: true
exit_code: 0
----- stdout -----
v0.7.2+df8fc926e-nightly

----- stderr -----
