tests/e2e/snapshots/test__e2e__flow__liveinstall__moon_use_pinned_version.snap
---
source: tests/e2e/flow.rs
info:
  program: moon
  args:
    - version
    - "--all"
---
success: true
exit_code: 0
----- stdout -----
moon 0.1.20241231 (16670d0 2024-12-31) [MOON_HOME]/bin/moon
moonc v0.1.20241231+ba15a9a4e [MOON_HOME]/bin/moonc
moonrun 0.1.20241231 (16670d0 2024-12-31) [MOON_HOME]/bin/moonrun

----- stderr -----
