tests/e2e/snapshots/test__e2e__flow__liveinstall__moonup_install_2.snap
---
source: tests/e2e/flow.rs
info:
  program: moonup
  args:
    - install
    - 0.1.20241231+ba15a9a4e
---
success: true
exit_code: 0
----- stdout -----
Installing toolchain '0.1.20241231+ba15a9a4e'
✔ Installed toolchain version '0.1.20241231+ba15a9a4e'
Make sure '[MOON_HOME]/bin' is added to your PATH

----- stderr -----
Finished. moon: ran 47 tasks, now up to date
Finished. moon: ran 47 tasks, now up to date
Finished. moon: ran 47 tasks, now up to date
Finished. moon: ran 47 tasks, now up to date
